--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
       <zone title="preproduction"></zone>
       <zone title="production"></zone>
     </kanban>
+    <div draggable="true" style="width: 200px; height: 200px; background-color: #F00">pipo</div>
 
     <script src="js/kanban.js"></script>
   </body>
