better css + scroll position for DND

--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,11 @@
       <zone title="qualification"></zone>
       <zone title="preproduction"></zone>
       <zone title="production"></zone>
+      <zone title="back" class="line"></zone>
+      <zone title="front" class="line"></zone>
+      <zone title="cms" class="line"></zone>
+      <zone title="other" class="line"></zone>
     </kanban>
-    <div draggable="true" style="width: 200px; height: 200px; background-color: #F00">pipo</div>
 
     <script src="js/kanban.js"></script>
   </body>
