--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         @dragover.prevent="handleDragOver" @drop.prevent="handleDrop" @dragleave.stop="handleDragLeave"
         @dragend.stop="handleDragEnd" @dragstart="handleDrag"
         :style="{left: model.x + 'px', top: model.y + 'px'}">
-        <div class="task-content" :class="{selected: selected, dragged: dragged}">
+        <div class="task-content" :class="background">
           <h3>{{model.title}}</h3>
         </div>  
         <div v-if="model.task" @dragstart.stop="handleDragStart">
@@ -38,10 +38,15 @@
       <template v-if="task != null">
       <div class="popup-background" @click="cancel"></div>
         <div class="edit-task" @click.stop>
-          <label>ID </label>
+          <label>ID</label>
           <input type="text" v-model="task.id" disabled>
-          <label>Title </label> 
+          <label>Title</label> 
           <textarea v-model="task.title"></textarea>
+          <label>Category</label>
+          <template v-for="category in categories">
+            <input type="radio" :value="category" v-model="task.category">
+            <span :class="category">&nbsp;{{category}}&nbsp;</span>
+          </template>
           <p>
             <button type="button" @click="cancel">Cancel</button>
             <button type="button" @click="edit">Save</button>
@@ -82,7 +87,7 @@
 
     <menu></menu>
 
-    <edit-task :task="currentTask"></edit-task>
+    <edit-task :task="currentTask" :categories="categories"></edit-task>
 
     <script src="js/kanban.js"></script>
   </body>
