sticker first part

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
         <div class="task-content" :class="background">
           <h3>{{model.title}}</h3>
         </div>
+        <div v-if="model.sticker" class="sticker"></div> 
         <div v-if="model.task" @dragstart.stop="handleDragStart">
           <task :model="model.task" class="innerTask"/>
         </div>
